# matryoshka

./: .gitignore  .gitmodules  CMakeLists.txt
bench/: bench_compare.cpp  bench_matryoshka.c  report.py  report_template.tex.j2  workloads.h  wrappers.h
doc/: design.tex
include/: matryoshka.h  matryoshka_internal.h
src/: alloc.c  arena.c  hierarchy.c  inode.c  leaf.c  matryoshka.c  superpage.c
tests/: test_matryoshka.c
